--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap');
+body{
+  font-family: 'Quicksand', sans-serif;
+}
+
 .App {
   text-align: center;
 }
